# NFLPlayerSentiments

./: .gitignore  .gitmodules  NFLplayerSentiments.py  README.md
.github/workflows/: python-publish.yml
createReport/: CreateReport.py  __init__.py
server/: README.md  pyproject.toml  tox.ini
server/nfl/: error.py
server/nfl/clients/: x.py
server/nfl/config/: config.py  confload.py  hashicorp.py
server/nfl/services/: posts.py  scraper.py
server/nfl/trends/: CalculateSentiments.py  CalculateSentimentsTest.py  __init__.py  data.py  getSentiments.py  outputSentiments.py
server/nfl/trends/getData/: Twitter.py  data.py  tweetTest.py  ucb.py  utils.py  x_integration.py
server/nfl/trends/getData/twitter/: __init__.py  api.py  archiver.py  auth.py  cmdline.py  oauth.py  oauth2.py  oauth_dance.py  stream.py  timezones.py  twitter_globals.py  util.py
server/tests/config/: test_confload.py  test_hashicorp.py
trends/: CalculateSentiments.py  outputSentiments.py
website/: about.html  aboutStyles.css  index.html  styles.css
website/scripts/: jq_scripts.js
