[tool.poetry]
name = "nfl"
version = "0.1.0"
description = "NFL Player sentiments"
authors = ["Alan Ponte <alanjponte@gmail.com>"]
readme = "README.md"
#packages = [{ include = "your_package_name" }]  # or remove if not using a package dir

[tool.poetry.dependencies]
python = "^3.13"
hvac = "^2.3.0"
requests-oauthlib = "^2.0.0"
tweepy = "^4.16.0"
snscrape = "^0.7.0.20230622"

[tool.poetry.group.test.dependencies]
black = "25.1.0"
mypy = "^1.17.1"
pylint = "3.3.7"
pytest="^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
